# uned-glossary-to-anki

./: README.md  UNEDGlossaryToAnki.ipynb  pyproject.toml
data/: glossary_gei.txt
